[package]
name = "site_update_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
scraper = "0.18"